--- a/pages/index.html
+++ b/pages/index.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/index.css">
 </head>
 <body>
     <div class="header">
         <div class="container">
         <div class="navbar">  
             <div class="logo">
-                <img src="../assets/img/img01.jpg" width="250px">
+                <img src="../assets/img/img01.jpg" width="150px">
             </div>
         <nav class="meun">
             <ul>
                 <li><a href="../pages/index.html">Home</a></li>
                 <li><a href="../pages/hw01.html">Shop</a></li>
-                <a href="#">
+                <a href="../pages/team.html">
                     <li>Contact</a></li>
                 </a>
-                <li><a href="../pages/log in.html">Account</a></li>
+                <li><a href="../pages/login.html">Account</a></li>
             </ul>
         </nav>
         <a>
@@ -31,93 +31,77 @@
         </div>
         </div>
 
-     <nav class="navigationbar">
-        <div class="dropdown">
-            <button class="dropbtn">手機</button>
-            <div class="dropdown-content">
-                <a href="#category1">Category 1</a>
-                <a href="#category2">Category 2</a>
-                <a href="#category3">Category 3</a>
+        <nav class="navigationbar">
+            <div class="dropdown">
+                <p>YU weavws</p>
             </div>
-        </div>
-
-        <div class="dropdown">
-            <button class="dropbtn">其他</button>
-            <div class="dropdown-content">
-                <a href="#category1">Category 1</a>
-                <a href="#category2">Category 2</a>
-                <a href="#category3">Category 3</a>
-             </div>
-        </div>
-    </nav>
-
-    <div class="row">
-        <div class="col1">
-            <h1>用心與線向您<br>郁織零用錢!</h1>
-            <a href="../pages/hw01.html" class="btn">探索一下 &#8594;</a>
-        </div>
-        <div class="col2">
-            <img src="../assets/img/img04.jpg">
-        </div>
-     </div>
-    </div>
-
-     <div class="categories">
-        <div class="lil-container">
-            <div class="row">
-                <div class="prod1">
-                    <img src="../assets/img/img05.jpg">
-                </div>
-                <div class="prod1">
-                    <img src="../assets/img/img13.jpg">
-                </div>
-                <div class="prod1">
-                    <img src="../assets/img/img06.jpg">
-                </div>
-            </div>
-        </div>
-     </div>
-
-     <div class="title"><p>精選商品</p></div>
-        <div class="producutimg">
-          <div class="producutimg1">
-              <a href="../pages/hw03.html"><img src="../assets/img/img18.jpg" class="p"></a>
-              <p>🧋珍珠奶茶造型飲料提袋🧋</p>
-              <p>$400</p>
-          </div>
-          <div class="producutimg2">
-              <a href="..//pages/hw06.html"><img src="../assets/img/img23.jpg" class="p"></a>
-              <p>🪻桔梗鏤空花花證件掛繩🪻</p>
-              <p>$350</p>
-          </div>
-          <div class="producutimg3">
-              <a href="../pages/hw04.html"><img src="../assets/img/img27.jpg" class="p"></a>
-              <p>🥤純色網格飲料提袋🥤</p>
-              <p>$350</p>
-          </div>
-        </div>
-          <div class="producutimg">
-          <div class="producutimg4">
-            <a href="../pages/hw07.html"><img src="../assets/img/img35.jpg" class="p"></a>
-            <p>⚽️男女通吃四股辮手機掛繩⚽️</p>
-            <p>$700</p>
-        </div>
-        <div class="producutimg5">
-            <a href="../pages/hw02.html"><img src="../assets/img/img25.jpg" class="p"></a>
-            <p>🌸小黃花配色花花手機掛繩🌸</p>
-            <p>$700</p>
-        </div>
-        <div class="producutimg6">
-            <a href="../pages/hw09.html"><img src="../assets/img/img30.jpg" class="p"></a>
-            <p>👜純色鏤空俏皮小包👜</p>
-            <p>$890</p>
-        </div>
-        </div>
-        </div>
-        </div>
-
-    <div class="footer">
+        </nav>
+    <div class="header">
         <div class="row">
+            <div class="col1">
+                <h1>用心與線向您<br>郁織零用錢!</h1>
+                <a href="../pages/hw01.html" class="btn">探索一下 &#8594;</a>
+            </div>
+            <div class="col2">
+                <img src="../assets/img/img04.jpg" width="850px">
+            </div>
+        </div>
+        </div>
+
+        <div class="categories">
+            <div class="lil-container">
+                <div class="row">
+                    <div class="prod1">
+                        <img src="../assets/img/img05.jpg">
+                    </div>
+                    <div class="prod1">
+                        <img src="../assets/img/img13.jpg">
+                    </div>
+                    <div class="prod1">
+                        <img src="../assets/img/img06.jpg">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="title"><p>精選商品</p></div>
+            <div class="producutimg">
+            <div class="producutimg1">
+                <a href="../pages/hw03.html"><img src="../assets/img/img18.jpg" class="p"></a>
+                <p>🧋珍珠奶茶造型飲料提袋🧋</p>
+                <p>$400</p>
+            </div>
+            <div class="producutimg2">
+                <a href="..//pages/hw06.html"><img src="../assets/img/img23.jpg" class="p"></a>
+                <p>🪻桔梗鏤空花花證件掛繩🪻</p>
+                <p>$350</p>
+            </div>
+            <div class="producutimg3">
+                <a href="../pages/hw04.html"><img src="../assets/img/img27.jpg" class="p"></a>
+                <p>🥤純色網格飲料提袋🥤</p>
+                <p>$350</p>
+            </div>
+            </div>
+            <div class="producutimg">
+            <div class="producutimg4">
+                <a href="../pages/hw07.html"><img src="../assets/img/img35.jpg" class="p"></a>
+                <p>⚽️男女通吃四股辮手機掛繩⚽️</p>
+                <p>$700</p>
+            </div>
+            <div class="producutimg5">
+                <a href="../pages/hw02.html"><img src="../assets/img/img25.jpg" class="p"></a>
+                <p>🌸小黃花配色花花手機掛繩🌸</p>
+                <p>$700</p>
+            </div>
+            <div class="producutimg6">
+                <a href="../pages/hw09.html"><img src="../assets/img/img30.jpg" class="p"></a>
+                <p>👜純色鏤空俏皮小包👜</p>
+                <p>$890</p>
+            </div>
+            </div>
+        
+
+      <div class="footer">
             <div class="container1">
                 <div class="footer-col2">
                     <img src="../assets/img/img01.jpg">                    
@@ -125,6 +109,11 @@
                 <div class="footer-col3">
                     <a href="https://www.instagram.com/yuweaves/">
                          <img class="ig" src="../assets/img/ig.png">
+                    </a>
+                </div>
+                <div class="footer-col3">
+                    <a href="mailto:jim20030917@gmail.com">
+                         <img class="ig" src="../assets/img/emal.jpg">
                     </a>
                 </div>
                 <div class="footer-col4">
