--- a/pages/log in.html
+++ b/pages/log in.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/andrew.css">
-    <title>Document</title>
+    <title>會員中心</title>
 </head>
 <body>
+
 	<div class="header">
         <div class="container">
         <div class="navbar">  
@@ -15,12 +16,12 @@
             </div>
         <nav class="meun">
             <ul>
-                <li><a href="../pages/index.html">Home</a></li>
+                <li><a href="../pages/index.jsp">Home</a></li>
                 <li><a href="../pages/hw01.html">Shop</a></li>
                 <a href="https://itouch.cycu.edu.tw/active_project/cycu2900h_09/forms/#/forms/4383">
                     <li>Contact</a></li>
                 </a>
-                <li><a href="../pages/log in.html">Account</a></li>
+                <li><a href="../pages/log in.jsp">Account</a></li>
             </ul>
         </nav>
         <a>
