--- a/pages/hw05.html
+++ b/pages/hw05.html
@@ -11,16 +11,16 @@
         <div class="container">
         <div class="navbar">  
             <div class="logo">
-                <img src="../assets/img/img01.jpg" width="250px">
+                <img src="../assets/img/img01.jpg" width="150px">
             </div>
         <nav class="meun">
             <ul>
                 <li><a href="../pages/index.html">Home</a></li>
                 <li><a href="../pages/hw01.html">Shop</a></li>
-                <a href="https://itouch.cycu.edu.tw/active_project/cycu2900h_09/forms/#/forms/4383">
+                <a href="../pages/team.html">
                     <li>Contact</a></li>
                 </a>
-                <li><a href="../pages/log in.html">Account</a></li>
+                <li><a href="../pages/ll">Account</a></li>
             </ul>
         </nav>
         <a>
@@ -29,23 +29,9 @@
             </a>
         </div>
         </div>
-         <nav class="navigationbar">
+        <nav class="navigationbar">
             <div class="dropdown">
-                <button class="dropbtn">手機</button>
-                <div class="dropdown-content">
-                    <a href="#category1">Category 1</a>
-                    <a href="#category2">Category 2</a>
-                    <a href="#category3">Category 3</a>
-                </div>
-            </div>
-    
-            <div class="dropdown">
-                <button class="dropbtn">其他</button>
-                <div class="dropdown-content">
-                    <a href="#category1">Category 1</a>
-                    <a href="#category2">Category 2</a>
-                    <a href="#category3">Category 3</a>
-                </div>
+                <p>YU weavws</p>
             </div>
         </nav>
 <h1>👛祖母方格文青少女小廢包👛</h1>
@@ -72,16 +58,15 @@
     </div>
 
     <div class="text01">
-        <h2> 產品介紹<br></h2>
-        <p>💰550元<br>
-        祖母方格的花紋真的百看不膩<br>
-        喜歡粉紫色的姐妹們千萬不要錯過<br>
-        這款取名叫小廢包但其實一點都不廢<br>
-        實測可以裝一台手機+口紅+一串鑰匙都沒問題<br>
-        還可以裝下各位的可愛😍<br>
-        快點加入小（微）廢包的行列吧<br>
-        純手工編織🧶
-        </p>
+        <h2> 產品介紹</h2>
+        <p>💰550元</p>
+        <p>祖母方格的花紋真的百看不膩</p>
+        <p>喜歡粉紫色的姐妹們千萬不要錯過</p>
+        <p>這款取名叫小廢包但其實一點都不廢</p>
+        <p>實測可以裝一台手機+口紅+一串鑰匙都沒問題</p>
+        <p>還可以裝下各位的可愛😍</p>
+        <p>快點加入小（微）廢包的行列吧</p>
+        <p>純手工編織🧶</p>
         <div class="button">
             <div class="button1">
                 <input type="button" value="加入購物車" name="按鈕名稱" style="width:150px;height:50px;">
@@ -155,6 +140,11 @@
             <div class="footer-col3">
                 <a href="https://www.instagram.com/yuweaves/">
                      <img class="ig" src="../assets/img/ig.png">
+                </a>
+            </div>
+            <div class="footer-col3">
+                <a href="mailto:jim20030917@gmail.com">
+                     <img class="ig" src="../assets/img/emal.jpg">
                 </a>
             </div>
             <div class="footer-col4">
