--- a/pages/hw08.html
+++ b/pages/hw08.html
@@ -11,16 +11,16 @@
         <div class="container">
         <div class="navbar">  
             <div class="logo">
-                <img src="../assets/img/img01.jpg" width="250px">
+                <img src="../assets/img/img01.jpg" width="150px">
             </div>
         <nav class="meun">
             <ul>
                 <li><a href="../pages/index.html">Home</a></li>
                 <li><a href="../pages/hw01.html">Shop</a></li>
-                <a href="https://itouch.cycu.edu.tw/active_project/cycu2900h_09/forms/#/forms/4383">
+                <a href="../pages/team.html">
                     <li>Contact</a></li>
                 </a>
-                <li><a href="../pages/log in.html">Account</a></li>
+                <li><a href="../pages/login.html">Account</a></li>
             </ul>
         </nav>
         <a>
@@ -29,23 +29,9 @@
             </a>
         </div>
         </div>
-         <nav class="navigationbar">
+        <nav class="navigationbar">
             <div class="dropdown">
-                <button class="dropbtn">手機</button>
-                <div class="dropdown-content">
-                    <a href="#category1">Category 1</a>
-                    <a href="#category2">Category 2</a>
-                    <a href="#category3">Category 3</a>
-                </div>
-            </div>
-    
-            <div class="dropdown">
-                <button class="dropbtn">其他</button>
-                <div class="dropdown-content">
-                    <a href="#category1">Category 1</a>
-                    <a href="#category2">Category 2</a>
-                    <a href="#category3">Category 3</a>
-                </div>
+                <p>YU weavws</p>
             </div>
         </nav>
 <h1>🥤雙色網格飲料提袋🥤</h1>
@@ -69,15 +55,15 @@
 
     <div class="text01">
         <h2>產品介紹</h2>
-        <p>💰350元<br>
-            我最喜歡的就是手搖飲料了<br>
-            無論何時都想喝飲料🙌🏻<br>
-            但往往飲料都沒辦法在短時間內喝完<br>
-            這時就需要飲料提袋的幫忙啦！<br>
-            這款真的 超～耐～用～<br>
-            體積小不佔空間<br>
-            大部分飲料杯皆適用<br>
-            純手工編織，顏色可自由混搭</p>
+        <p>💰350元</p>
+           <p> 我最喜歡的就是手搖飲料了</p>
+            <p>無論何時都想喝飲料🙌🏻</p>
+            <p>但往往飲料都沒辦法在短時間內喝完</p>
+            <p>這時就需要飲料提袋的幫忙啦！</p>
+            <p>這款真的 超～耐～用～</p>
+            <p>體積小不佔空間</p>
+            <p>大部分飲料杯皆適用</p>
+            <p>純手工編織，顏色可自由混搭</p>
         <div class="button">
             <div class="button1">
                 <input type="button" value="加入購物車" name="按鈕名稱" style="width:150px;height:50px;">
@@ -152,6 +138,11 @@
             <div class="footer-col3">
                 <a href="https://www.instagram.com/yuweaves/">
                      <img class="ig" src="../assets/img/ig.png">
+                </a>
+            </div>
+            <div class="footer-col3">
+                <a href="mailto:jim20030917@gmail.com">
+                     <img class="ig" src="../assets/img/emal.jpg">
                 </a>
             </div>
             <div class="footer-col4">
