--- a/pages/hw09.html
+++ b/pages/hw09.html
@@ -11,16 +11,16 @@
         <div class="container">
         <div class="navbar">  
             <div class="logo">
-                <img src="../assets/img/img01.jpg" width="250px">
+                <img src="../assets/img/img01.jpg" width="150px">
             </div>
         <nav class="meun">
             <ul>
                 <li><a href="../pages/index.html">Home</a></li>
                 <li><a href="../pages/hw01.html">Shop</a></li>
-                <a href="https://itouch.cycu.edu.tw/active_project/cycu2900h_09/forms/#/forms/4383">
+                <a href="../pages/team.html">
                     <li>Contact</a></li>
                 </a>
-                <li><a href="../pages/log in.html">Account</a></li>
+                <li><a href="../pages/login.html">Account</a></li>
             </ul>
         </nav>
         <a>
@@ -29,23 +29,9 @@
             </a>
         </div>
         </div>
-         <nav class="navigationbar">
+        <nav class="navigationbar">
             <div class="dropdown">
-                <button class="dropbtn">手機</button>
-                <div class="dropdown-content">
-                    <a href="#category1">Category 1</a>
-                    <a href="#category2">Category 2</a>
-                    <a href="#category3">Category 3</a>
-                </div>
-            </div>
-    
-            <div class="dropdown">
-                <button class="dropbtn">其他</button>
-                <div class="dropdown-content">
-                    <a href="#category1">Category 1</a>
-                    <a href="#category2">Category 2</a>
-                    <a href="#category3">Category 3</a>
-                </div>
+                <p>YU weavws</p>
             </div>
         </nav>
 <h1>🪻桔梗鏤空花花證件掛繩🪻</h1>
@@ -73,12 +59,12 @@
 
     <div class="text01">
         <h2>產品介紹</h2>
-        <p>💰890元（內附束口袋）<br>
-            天啊！這個芥末黃真的好可愛<br>
-            可以手提又可以側別 一包兩用超方便<br>
-            裡面還附贈一個束口袋<br>
-            防止大家擔心鏤空東西會掉出來<br>
-            大小適中百搭拜託大家一定要買一個( ´͈ ᵕ `͈ )◞♡</p>
+        <p>💰890元（內附束口袋）</p>
+            <p>天啊！這個芥末黃真的好可愛</p>
+            <p>可以手提又可以側別 一包兩用超方便</p>
+            <p>裡面還附贈一個束口袋</p>
+            <p>防止大家擔心鏤空東西會掉出來</p>
+            <p>大小適中百搭拜託大家一定要買一個( ´͈ ᵕ `͈ )◞♡</p>
         <div class="button">
             <div class="button1">
                 <input type="button" value="加入購物車" name="按鈕名稱" style="width:150px;height:50px;">
@@ -152,6 +138,11 @@
             <div class="footer-col3">
                 <a href="https://www.instagram.com/yuweaves/">
                      <img class="ig" src="../assets/img/ig.png">
+                </a>
+            </div>  
+            <div class="footer-col3">
+                <a href="mailto:jim20030917@gmail.com">
+                     <img class="ig" src="../assets/img/emal.jpg">
                 </a>
             </div>
             <div class="footer-col4">
