最後一次統整推送

--- a/pages/hw03.html
+++ b/pages/hw03.html
@@ -11,41 +11,40 @@
         <div class="container">
         <div class="navbar">  
             <div class="logo">
-                <img src="../assets/img/img01.jpg" width="250px">
+                <img src="../assets/img/img01.jpg" width="150px">
             </div>
+			<div class="wrap">
+			<form  method="POST">
+                    <div class="search">
+                        <input class="search-bar" type="search" name="search" id="search" placeholder="請輸入商品名稱">
+                        <button class="search-btn" type="submit" name="search" width=50><img src="../assets/img/search.png"></button>
+                    </div>
+                </form>
+			</div>	
         <nav class="meun">
-            <ul>
-                <li><a href="../pages/index.html">Home</a></li>
+            <ul class="drop-down-menu">
+                <li>
+                    <a href="#" >會員中心</a>
+                    <ul class="dropdown">
+                        <li><a href="login.html">登入/註冊</a></li>
+                        <li><a href="history.html">訂單</a></li>
+                        <li><a href="setup.html">修改資料</a></li>
+                    </ul>
+                </li>		
+                <li><a href="../pages/index.html">Home</a></li>				
                 <li><a href="../pages/hw01.html">Shop</a></li>
-                <a href="https://itouch.cycu.edu.tw/active_project/cycu2900h_09/forms/#/forms/4383">
-                    <li>Contact</a></li>
-                </a>
-                <li><a href="../pages/log in.html">Account</a></li>
+				<li><a href="../pages/team.html">aboutus</a></li>		
             </ul>
         </nav>
-        <a>
             <a href="../pages/cart.html">
                 <img src="../assets/img/car.png" width="30px" height="30px">
             </a>
         </div>
         </div>
-         <nav class="navigationbar">
-            <div class="dropdown">
-                <button class="dropbtn">手機</button>
-                <div class="dropdown-content">
-                    <a href="#category1">Category 1</a>
-                    <a href="#category2">Category 2</a>
-                    <a href="#category3">Category 3</a>
-                </div>
-            </div>
     
-            <div class="dropdown">
-                <button class="dropbtn">其他</button>
-                <div class="dropdown-content">
-                    <a href="#category1">Category 1</a>
-                    <a href="#category2">Category 2</a>
-                    <a href="#category3">Category 3</a>
-                </div>
+       <nav class="navigationbar">
+            <div class="dropdown01">
+                <p>YU weavws</p>
             </div>
         </nav>
 <h1>🧋珍珠奶茶造型飲料提袋🧋</h1>
@@ -76,14 +75,14 @@
     </div>
 
     <div class="text01">
-        <h2> 產品介紹<br></h2>
-        <p>💰400元<br></p>
-        <p>It’s tea time 🫖<br></p>
-        <p>禮拜日的下午，來杯珍珠奶茶吧<br></p>
-        <p>想到台灣美食大家會想到什麼呢？<br></p>
-        <p>珍珠奶茶是一定要的吧！<br></p>
-        <p>珍珠奶茶披薩、珍珠奶茶冰、珍珠奶茶酥<br></p>
-        <p>現在來個珍珠奶茶杯套大家也不會覺得奇怪了<br></p>
+        <h2> 產品介紹</h2>
+        <p>💰400元</p>
+        <p>It’s tea time 🫖</p>
+        <p>禮拜日的下午，來杯珍珠奶茶吧</p>
+        <p>想到台灣美食大家會想到什麼呢？</p>
+        <p>珍珠奶茶是一定要的吧！</p>
+        <p>珍珠奶茶披薩、珍珠奶茶冰、珍珠奶茶酥</p>
+        <p>現在來個珍珠奶茶杯套大家也不會覺得奇怪了</p>
         <p>快來帶著珍珠奶茶造型杯套去買杯珍珠奶茶🧋</p>
         <P>純手工編織🧶</p>
         <div class="button">
@@ -118,7 +117,7 @@
 </div>
 <div class="buyer">
     <div class="consumer_name">
-        <p>買家名稱:Emma/p>
+        <p>買家名稱:Emma</p>
     </div>
     <br>
     <div class="respond">
@@ -159,6 +158,11 @@
             <div class="footer-col3">
                 <a href="https://www.instagram.com/yuweaves/">
                      <img class="ig" src="../assets/img/ig.png">
+                </a>
+            </div>
+            <div class="footer-col3">
+                <a href="mailto:jim20030917@gmail.com">
+                     <img class="ig" src="../assets/img/emal.jpg">
                 </a>
             </div>
             <div class="footer-col4">
