--- a/pages/history.html
+++ b/pages/history.html
@@ -1,37 +1,56 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <title>YU weavws</title>
+    <link rel="stylesheet" href="../assets/css/history.css">
+	<link rel="stylesheet" href="../assets/css/index.css">
 </head>
 <body>
+
     <div class="header">
         <div class="container">
         <div class="navbar">  
             <div class="logo">
-                <img src="../assets/img/img01.jpg" width="250px">
+                <img src="../assets/img/img01.jpg" width="150px">
             </div>
+			<div class="wrap">
+			<form  method="POST">
+                    <div class="search">
+                        <input class="search-bar" type="search" name="search" id="search" placeholder="請輸入商品名稱">
+                        <button class="search-btn" type="submit" name="search" width=50><img src="../assets/img/search.png"></button>
+                    </div>
+                </form>
+			</div>	
         <nav class="meun">
-            <ul>
-                <li><a href="../pages/index.html">Home</a></li>
+            <ul class="drop-down-menu">
+                <li>
+                    <a href="#" >會員中心</a>
+                    <ul class="dropdown">
+                        <li><a href="login.html">登入/註冊</a></li>
+                        <li><a href="history.html">訂單</a></li>
+                        <li><a href="setup.html">修改資料</a></li>
+                    </ul>
+                </li>		
+                <li><a href="../pages/index.html">Home</a></li>				
                 <li><a href="../pages/hw01.html">Shop</a></li>
-                <a href="https://itouch.cycu.edu.tw/active_project/cycu2900h_09/forms/#/forms/4383">
-                    <li>Contact</a></li>
-                </a>
-                <li><a href="../pages/log in.html">Account</a></li>
+				<li><a href="../pages/team.html">aboutus</a></li>					
             </ul>
         </nav>
-        <a>
             <a href="../pages/cart.html">
                 <img src="../assets/img/car.png" width="30px" height="30px">
             </a>
         </div>
         </div>
-
-
-        <div class="cart-page">
+    
+       <nav class="navigationbar">
+            <div class="dropdown01">
+                <p>YU weavws</p>
+            </div>
+        </nav>
+		<div class="cart-page">
             <h3>最新訂單</h3>
             <table>
                 <tr>
@@ -44,34 +63,18 @@
                         <div class="cart-info">
                             <img src="../assets/img/img13.jpg">
                         <div>
-                            <p>XXXXX</p>
-                            <small>$300</small>
+                            <p>🧋珍珠奶茶造型飲料提袋🧋</p>
+                            <small>$400</small>
                         </div>
                         </div>
-
-                    </td> 
-                    <td><input type="number" value="1"></td>
-                    <td>$300</td>
+                    </td>
+                    <td><input type="number" readonly value="1"></td>
+                    <td>$400</td>
                 </tr>
-                <td>
-                    <br>
-                    <br>
-                    <div class="cart-info">
-                        <img src="../assets/img/img05.jpg">
-                    <div>
-                        <p>XXXXX</p>
-                        <small>$300</small>
-                    </div>
-                    </div>
-                </td> 
-                <td><input type="number" value="1"></td>
-                <td>$300</td>
+
             </table>
-            <br>
-            <br>
-            <br>
-            <br>
-            <h3>歷史訂單</h3>
+
+             <h3>歷史訂單</h3>
 
             <table>
                 <tr>
@@ -82,16 +85,16 @@
                 <tr>
                     <td>
                         <div class="cart-info">
-                            <img src="../assets/img/img26.jpg">
+                            <img src="../assets/img/img29.jpg">
                         <div>
-                            <p>XXXXX</p>
-                            <small>$300</small>
+                            <p>⚽️男女通吃四股辮手機掛繩⚽️</p>
+                            <small>$700</small>
                         </div>
                         </div>
 
                     </td> 
-                    <td><input type="number" value="1"></td>
-                    <td>$300</td>
+                    <td><input type="number" readonly value="1"></td>
+                    <td>$700</td>
                 </tr>
                
                 <td>
@@ -100,13 +103,13 @@
                     <div class="cart-info">
                         <img src="../assets/img/img25.jpg">
                     <div>
-                        <p>XXXXX</p>
-                        <small>$300</small>
+                        <p>🥤雙色網格飲料提袋🥤</p>
+                        <small>$350</small>
                     </div>
                     </div>
                 </td> 
-                <td><input type="number" value="1"></td>
-                <td>$300</td>
+                <td><input type="number" readonly value="1"></td>
+                <td>$350</td>
             </table>
         </div>
         <div class="footer">
@@ -118,6 +121,11 @@
                     <div class="footer-col3">
                         <a href="https://www.instagram.com/yuweaves/">
                              <img class="ig" src="../assets/img/ig.png">
+                        </a>
+                    </div>
+                    <div class="footer-col3">
+                        <a href="mailto:jim20030917@gmail.com">
+                             <img class="ig" src="../assets/img/emal.jpg">
                         </a>
                     </div>
                     <div class="footer-col4">
