--- a/pages/hw07.html
+++ b/pages/hw07.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>YU weavws</title>
     <link rel="stylesheet" href="../assets/css/hw07.css">
 </head>
 <body>
@@ -11,41 +11,40 @@
         <div class="container">
         <div class="navbar">  
             <div class="logo">
-                <img src="../assets/img/img01.jpg" width="250px">
+                <img src="../assets/img/img01.jpg" width="150px">
             </div>
+			<div class="wrap">
+			<form  method="POST">
+                    <div class="search">
+                        <input class="search-bar" type="search" name="search" id="search" placeholder="請輸入商品名稱">
+                        <button class="search-btn" type="submit" name="search" width=50><img src="../assets/img/search.png"></button>
+                    </div>
+                </form>
+			</div>	
         <nav class="meun">
-            <ul>
-                <li><a href="../pages/index.html">Home</a></li>
+            <ul class="drop-down-menu">
+                <li>
+                    <a href="#" >會員中心</a>
+                    <ul class="dropdown">
+                        <li><a href="login.html">登入/註冊</a></li>
+                        <li><a href="history.html">訂單</a></li>
+                        <li><a href="setup.html">修改資料</a></li>
+                    </ul>
+                </li>		
+                <li><a href="../pages/index.html">Home</a></li>				
                 <li><a href="../pages/hw01.html">Shop</a></li>
-                <a href="https://itouch.cycu.edu.tw/active_project/cycu2900h_09/forms/#/forms/4383">
-                    <li>Contact</a></li>
-                </a>
-                <li><a href="../pages/log in.html">Account</a></li>
+				<li><a href="../pages/team.html">aboutus</a></li>		
             </ul>
         </nav>
-        <a>
             <a href="../pages/cart.html">
                 <img src="../assets/img/car.png" width="30px" height="30px">
             </a>
         </div>
         </div>
-         <nav class="navigationbar">
-            <div class="dropdown">
-                <button class="dropbtn">手機</button>
-                <div class="dropdown-content">
-                    <a href="#category1">Category 1</a>
-                    <a href="#category2">Category 2</a>
-                    <a href="#category3">Category 3</a>
-                </div>
-            </div>
     
-            <div class="dropdown">
-                <button class="dropbtn">其他</button>
-                <div class="dropdown-content">
-                    <a href="#category1">Category 1</a>
-                    <a href="#category2">Category 2</a>
-                    <a href="#category3">Category 3</a>
-                </div>
+       <nav class="navigationbar">
+            <div class="dropdown01">
+                <p>YU weavws</p>
             </div>
         </nav>
 <h1>⚽️男女通吃四股辮手機掛繩⚽️</h1>
@@ -72,14 +71,14 @@
 
     <div class="text01">
         <h2>產品介紹</h2>
-        <p>花系列700元<br>
-            半花+伸縮系列600元<br>
-            全伸縮系列400元<br>
-            男女都可用的編織掛繩來啦🥳<br>
-            這款整條都可以伸縮<br>
-            短至證件掛繩長至手機掛繩<br>
-            一條掛繩男女朋友都可通用好划算！<br>
-            純手工編織🧶</p>
+        <p>花系列700元</p>
+            <p>半花+伸縮系列600元</p>
+            <p>全伸縮系列400元</p>
+            <p>男女都可用的編織掛繩來啦🥳</p>
+            <p>這款整條都可以伸縮</p>
+            <p>短至證件掛繩長至手機掛繩</p>
+            <p>一條掛繩男女朋友都可通用好划算！</p>
+            <p>純手工編織🧶</p>
         <div class="button">
             <div class="button1">
                 <input type="button" value="加入購物車" name="按鈕名稱" style="width:150px;height:50px;">
@@ -153,6 +152,11 @@
             <div class="footer-col3">
                 <a href="https://www.instagram.com/yuweaves/">
                      <img class="ig" src="../assets/img/ig.png">
+                </a>
+            </div>
+            <div class="footer-col3">
+                <a href="mailto:jim20030917@gmail.com">
+                     <img class="ig" src="../assets/img/emal.jpg">
                 </a>
             </div>
             <div class="footer-col4">
